--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./testdata/employeedb
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=ajay-capillary
-spring.datasource.password=ajay
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.platform=h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
