--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=calendarManagement
 server.port=8090
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./data/employeedb
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=ajay-capillary
-spring.datasource.password=ajay
+spring.datasource.username=sa
+spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
