--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 			<version>1.7.36</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.thrift</groupId>
+			<artifactId>libthrift</artifactId>
+			<version>0.21.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
